tests/fixtures/invalid/max_int_str.py
# Cannot call max() with Int, Str
x = max(1, "hello")
